--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "framer-motion": "^12.9.1",
     "graphql": "^16.10.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
