--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
