--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.1",
     "graphql": "^16.10.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
