--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@monaco-editor/react": "^4.7.0",
     "@types/apollo-upload-client": "^18.0.0",
     "apollo-upload-client": "^17.0.0",
     "clsx": "^2.1.1",
@@ -22,6 +23,7 @@
     "graphql": "^16.10.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
+    "monaco-editor": "^0.52.2",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
