--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@monaco-editor/react": "^4.7.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "@types/apollo-upload-client": "^18.0.0",
     "apollo-upload-client": "^17.0.0",
     "clsx": "^2.1.1",
