--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.2",
     "graphql": "^16.10.0",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
     "next": "15.3.1",
+    "npm": "^11.3.0",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
     "react-quill-new": "^3.4.6"
   },
   "devDependencies": {
@@ -41,8 +45,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-pdf": "^6.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
