--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@monaco-editor/react": "^4.7.0",
+    "@tippyjs/react": "^4.2.6",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
@@ -38,7 +39,9 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
-    "react-quill-new": "^3.4.6"
+    "react-player": "^2.16.0",
+    "react-quill-new": "^3.4.6",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
