--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@monaco-editor/react": "^4.7.0",
+    "@react-oauth/google": "^0.12.2",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
@@ -25,11 +26,13 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.2",
     "graphql": "^16.10.0",
+    "hls.js": "^1.6.7",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "npm": "^11.3.0",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
