--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/apollo-upload-client": "^18.0.0",
     "apollo-upload-client": "^17.0.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.2",
@@ -36,6 +37,7 @@
     "npm": "^11.3.0",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
@@ -44,6 +46,7 @@
     "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
     "react-quill-new": "^3.4.6",
+    "recharts": "^3.1.0",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
@@ -53,6 +56,7 @@
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
     "@types/react-pdf": "^6.2.0",
     "eslint": "^9",
