--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hls.js": "^1.6.7",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
     "next": "15.3.1",
